work on js file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 </head>
 
 <body>
-    <h1>hello form the new page</h1>
+    <div class="content">
+        <input type="button" value="Start" onclick="get()">
+        <input type="text" size="5">
+        <input type="button" value="Stop" onclick="drop()">
+        <span></span>
+    </div>
 
 </body>
 
