--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <div class="content">
-        <input type="button" value="Start" onclick="get()">
-        <input type="text" size="5">
-        <input type="button" value="Stop" onclick="drop()">
+        <input type="button" value="Start" onclick="get()" class="start">
+        <input type="text" class="input">
+        <input type="button" value="Stop" onclick="drop()" class="close">
         <span></span>
     </div>
 
