--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <input type="button" value="Start" onclick="get()" class="start">
         <input type="text" class="input">
         <input type="button" value="Stop" onclick="drop()" class="close">
-        <span></span>
+        <span class="text"></span>
     </div>
 
 </body>
